Correctly overflow code blocks

--- a/styles/page.css
+++ b/styles/page.css
@@ -19,9 +19,13 @@
   }
 
   pre {
-    overflow: auto;
     padding: 1rem;
     border-radius: 8px;
+
+    code {
+      display: block;
+      overflow: auto;
+    }
   }
 
   blockquote {
